<resources>
    <string name="app_name">TableTennis</string>
    <string name="et_player_name_1">Player 1</string>
    <string name="et_player_name_2">Player 2</string>
    <string name="b_start">Start</string>
    <string name="buttonUp">UP</string>
    <string name="buttonDown">Down</string>
    <string name="button_save_result">Save Result</string>
    <string name="button_start_new_game">Start new game</string>
    <string name="tv_winner_title">WINNER</string>
    <string name="alert_dialog_title">Exit</string>
    <string name="alert_dialog_message">You are sure? If you exit, all game progress will
        be lost. Exit?</string>
    <string name="alert_dialog_button_yes">Yes</string>
    <string name="alert_dialog_button_no">No</string>
    <string name="permit_dialog_title">Permissions</string>
    <string name="permit_dialog_message">App need your permission. Otherwise, we will not be
        able take a picture and save it to the gallery. Do you want to allow permissions?</string>
    <string name="card_winner_title">Winner:</string>
    <string name="feed_ball_image">Feed Ball Image</string>
    <string name="fab_content_desc">Menu button</string>
    <string name="fab_close_content_desc">Close menu button</string>
    <string name="fab_settings_content_desc">Settings button</string>
    <string name="fab_result_content_desc">Result board button</string>
    <string name="app_version">1.0.0</string>
    <string name="developer">Розробка:</string>
    <string name="developer_name">FOXYSLY</string>
    <string name="about_app">AboutApp</string>
    <string name="share_title">Поділитися</string>
    <string name="share_button_title">Поділитися</string>
    <string name="part_size_twenty_one">21</string>
    <string name="part_size_eleven">11</string>
    <string name="part_title">Партія до</string>
    <string name="version_title">Версія:</string>
    <string name="camera">Camera</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="photo_link">Photo link</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="enter_url">Enter URL</string>
    <string name="image_link">IMAGE LINK</string>
</resources>