<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetUrl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_sheet"
    android:orientation="horizontal"
    android:padding="15dp"
    tools:context=".ui.sheets.BottomSheetUrl">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/image_link"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUrl"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_url"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:startIconDrawable="@drawable/ic_baseline_add_link_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPlaceUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bPlaceUrlAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/add"
        app:backgroundTint="@color/button_blue"
        app:layout_constraintEnd_toEndOf="@id/tilUrl"
        app:layout_constraintStart_toStartOf="@+id/glPlaceUrl"
        app:layout_constraintTop_toBottomOf="@id/tilUrl" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bPlaceUrlClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/close"
        app:backgroundTint="@color/button_gray"
        app:layout_constraintEnd_toEndOf="@id/glPlaceUrl"
        app:layout_constraintStart_toStartOf="@id/tilUrl"
        app:layout_constraintTop_toBottomOf="@id/tilUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>