<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetImageMenu"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:background="@drawable/bg_custom_sheet"
    android:backgroundTint="@color/white"
    android:orientation="horizontal"
    tools:context=".ui.sheets.BottomSheetMenu">

    <!--  Camera  -->
    <LinearLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cameraIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:tint="@color/gray" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/camera"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <!--  Gallery  -->
    <LinearLayout
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/galleryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_image_24"
            android:tint="@color/gray" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/image_from_gallery"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>

    <!--  Link  -->
    <LinearLayout
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gallery">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/linkIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_link_24"
            android:tint="@color/gray" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/photo_link"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>